[gd_scene load_steps=2 format=3 uid="uid://cm7ypqm5xo3sy"]

[ext_resource type="Script" path="res://Scripts/gameMenuUI.gd" id="1_l3my0"]

[node name="MainUI" type="CanvasLayer"]
visible = false
script = ExtResource("1_l3my0")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -400.0
offset_right = -400.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 128
theme_override_constants/margin_top = 128
theme_override_constants/margin_right = 128
theme_override_constants/margin_bottom = 128

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 140)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20
alignment = 1

[node name="playButton" type="Button" parent="Control/MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 20
text = "Play"
metadata/_edit_use_anchors_ = true

[node name="manageDeckButton" type="Button" parent="Control/MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 20
text = "Decks"
metadata/_edit_use_anchors_ = true

[node name="settingButton" type="Button" parent="Control/MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 20
text = "Setting
"
metadata/_edit_use_anchors_ = true

[node name="exitButton" type="Button" parent="Control/MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 20
text = "Exit"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Control/MarginContainer/HBoxContainer/VBoxContainer/playButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Control/MarginContainer/HBoxContainer/VBoxContainer/manageDeckButton" to="." method="_on_manage_deck_button_pressed"]
[connection signal="pressed" from="Control/MarginContainer/HBoxContainer/VBoxContainer/settingButton" to="." method="_on_setting_button_pressed"]
[connection signal="pressed" from="Control/MarginContainer/HBoxContainer/VBoxContainer/exitButton" to="." method="_on_exit_button_pressed"]
